--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
+@import "tailwindcss";
+@plugin "daisyui" {
+    themes: ["light", "dark"];
+}
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
